=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 v2.001

=over


=item *

Fixed bug in Krang::Alert which would not allow sub-classes of Krang
objects to be used.  Fixed Krang::ListItem tests in t/find.t, and
improved order_desc test to check entire result set.  Fixed bug
in t/library.t which caused some tests to appear without names.
[Jesse Erlbaum]


=item *

Fixed a bug in krang_create_lists which caused script to fail for
new addon system.  Added new feature to krang_create_lists and
lists.conf to permit list items to be specified. [Jesse Erlbaum]


=item *

Fixed a bug in which some tests would fail if the configured 
element set did not have an "article" type.  Tests will now run
even if you're using a custom element library.  [Jesse Erlbaum]


=item *

Fixed a bug in Krang::lib which caused "legacy" /krang/element_lib path to
not be included in Perl's @INC path.  [Jesse Erlbaum]


=back


=head2 v2.000

=over

=item *

Fixed a bug in bin/krang_backup where foreign key constraints in the wrong order were 
conflicting with addons containing innodb tables.  Patch sets foreign_key_checks=0 
at the top of the dump file. [Michael Peters]

=item *

Fixed a bug in Krang::Publisher::ZeroSizeOutPut().  Wrong hash keys specified.
[Jesse Erlbaum]

=item *

Added C<delete> action to track in Krang::History::add_history().
Added add_history() calls in Krang::Story::delete(), Krang::Template::delete(), 
and Krang::Media::delete() [Aaron Dancygier]

=item *

Converted default element set to use Krang::ClassLoader and Krang::ClassFactory in 
compliance with new addon system. [Aaron Dancygier]

=item *

Fixed a bug where deleting an element and then reverting to an older
version where that element existed didn't properly restore the
element.  The old element would load properly but save wouldn't
restore it in the database. [Sam]

=item *

Added support for Fedora Core 4. [Aaron Dancygier]

=item *
