@@ -41,6 +41,7 @@
 <input type="hidden" name="rm" value="find_story_link">
 <input type="hidden" name="path" value="<tmpl_var escape=1 path>">
 <input type="hidden" name="advanced" value="<tmpl_var escape=1 advanced>">
+<tmpl_var hard_find_hidden>
 
 <div class="dark-bar"><p class="left">Select Story</p><p class="right"><a href="javascript:goto_help()">Help</a>&nbsp;</p></div>
 
